<resources>
    <string name="app_name" translatable="false">WIMC</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Settings">Settings</string>
    <string name="Logout">Logout</string>
    <string name="HomeScreen">Home Screen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="change_password">Change Password..</string>
    <string name="car_model_year">Car Model Year</string>
    <string name="your_car_parks_here">Your Car Parks Here:</string>
    <string name="city_street_number">City Street Number</string>
    <string name="parking_lot">Parking Lot:</string>
    <string name="parking_lot_name">Parking Lot Name</string>
    <string name="parking_lot_floor">Parking Lot Floor</string>
    <string name="find_location_in_google_maps">Find Location in Google Maps</string>
    <string name="home_page">Home Page</string>
    <string name="settings">Settings</string>
    <string name="where_are_my_cars_now">Where are my Cars Now?</string>
    <string name="manage_my_cars">Manage My Cars</string>
    <string name="manage_shared_cars">Manage Shared Cars</string>
    <string name="logout">Logout</string>
    <string name="save_and_share_your_parking_spot">Save and Share your parking spot</string>
    <string name="car_model">Car Model</string>
    <string name="car_license">Car License</string>
    <string name="add_user_to_share_this_car">Add user To share this car</string>
    <string name="to_delete_the_user_click_on_his_row">To delete the user, click on his row</string>
    <string name="car_license_number">Car License Number</string>
    <string name="model_company">Car Manufacturer</string>
    <string name="email">Email</string>
    <string name="my_cars">My Cars</string>
    <string name="save">Save</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_up">Sign up!</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="we_are_parking_the_car">We are parking the car -</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="number">Number</string>
    <string name="floor_number">Floor Number</string>
    <string name="row_color">Row Color</string>
    <string name="take_photo">Take Photo</string>
    <string name="longitude_and_latitude">Longitude and Latitude</string>
    <string name="get_gps_location">Get GPS Location</string>
    <string name="save_parking">Save Parking</string>
    <string name="my_shared_cars">My Shared Cars</string>
    <string name="you_are_not_the_owner_of_these_cars_but_you_can_park_them">You are not the owner of these cars, but you can park them!</string>
    <string name="stop_parking">Stop Parking!</string>
    <string name="color">Color</string>
    <string name="add_new_car">Add New Car</string>
    <string name="manage_your_cars">Manage your cars</string>
    <string name="want_to_park_your_car_please_choose_the_car_below">Want to park your car? choose the car below!</string>
    <string name="save_location_for_car">Save location for car</string>
    <string name="car_list_empty">No parking cars right now</string>
</resources>
