<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/parking"
    tools:context=".Fragments.SettingsScreenFragment">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="40dp">


        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/settingsPasswordInput"
            android:singleLine="false"
            android:hint="@string/change_password"
            android:layout_below="@+id/settingsText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="#ffffff" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/settings"
            android:id="@+id/settingsText"
            android:layout_gravity="center_horizontal|top"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="#234f84"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="82dp"
            android:background="#ffffff" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_cars"
            android:id="@+id/button"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="67dp"
            android:layout_alignStart="@+id/settingsPasswordInput"
            android:layout_alignEnd="@+id/settingsPasswordInput" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/settingsPasswordButton"
            android:layout_below="@+id/settingsPasswordInput"
            android:layout_alignEnd="@+id/settingsPasswordInput"
            android:layout_alignStart="@+id/settingsPasswordInput" />


    </RelativeLayout>


</LinearLayout>
