<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/car_model_year"
                android:id="@+id/myParkingCarModelYear"
                android:layout_below="@+id/textView3"
                android:layout_alignStart="@+id/textView3"
                android:textAlignment="center"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:weightSum="1">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/your_car_parks_here"
                android:id="@+id/parkingText1"
                android:layout_below="@+id/textView3"
                android:layout_alignStart="@+id/textView3"
                android:textAlignment="center"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/city_street_number"
                android:id="@+id/parkingCityStreetInput1"
                android:layout_below="@+id/textView3"
                android:layout_alignStart="@+id/textView3"
                android:layout_weight="0.62"
                android:textAlignment="center"
                android:textStyle="bold" />



        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/parking_lot"
                android:id="@+id/parkingLotText"
                android:layout_below="@+id/textView3"
                android:layout_alignStart="@+id/textView3"
                android:layout_weight="0.62"
                android:textAlignment="center"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/parking_lot_name"
            android:id="@+id/parkingLotNameInput"
            android:layout_below="@+id/textView3"
            android:layout_alignStart="@+id/textView3"
            android:layout_weight="0.62"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/parking_lot_floor"
            android:id="@+id/parkingLotFloorInput"
            android:layout_below="@+id/textView3"
            android:layout_alignStart="@+id/textView3"
            android:layout_weight="0.62"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/parkingPhoto"
                android:contentDescription="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/find_location_in_google_maps"
                android:id="@+id/parkingLotGPS"
                android:layout_below="@+id/textView3"
                android:layout_alignStart="@+id/textView3"
                android:layout_weight="0.62"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>
</LinearLayout>
    </LinearLayout>