<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login1"
    tools:context="com.example.reabar.wimc.Fragments.SignupScreenFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="115dp">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailInput"
        android:singleLine="false"
        android:hint="@string/email"
        android:layout_above="@+id/repasswordInput"
        android:layout_centerHorizontal="true"
        android:textSize="28dp"
        android:textStyle="italic"
        android:textColorHint="#ffffff"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:imeOptions="actionDone" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/passwordInput"
        android:singleLine="false"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/repasswordInput"
        android:layout_alignEnd="@+id/repasswordInput"
        android:textStyle="italic"
        android:textSize="28dp"
        android:textColorHint="#ffffff"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:imeOptions="actionDone" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/repasswordInput"
        android:singleLine="false"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:layout_above="@+id/passwordInput"
        android:layout_alignStart="@+id/emailInput"
        android:layout_alignEnd="@+id/emailInput"
        android:textSize="28dp"
        android:textStyle="italic"
        android:textColorHint="#ffffff"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:imeOptions="actionDone" />

    <Button
        android:layout_width="263dp"
        android:layout_height="60dp"
        android:text="@string/sign_up"
        android:id="@+id/registerButton"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/passwordInput"
        android:layout_marginBottom="55dp"
        android:layout_alignEnd="@+id/passwordInput"
        android:textStyle="bold"
        android:textSize="28dp" />
    </LinearLayout>
</RelativeLayout>
